<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="i.am.eipeks.rims._activities.Test">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/test_type"
        android:hint="@string/type"
        android:textColorHint="@color/ash"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/click_me"
        android:layout_below="@id/test_type"
        android:layout_marginTop="20dp"
        android:text="@string/click_me"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:text="@string/app_name"
        android:padding="10dp"
        android:gravity="center"
        android:id="@+id/test_show_message"/>

</RelativeLayout>
