<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="i.am.eipeks.rims._activities.WelcomePage"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/app_bar"
        android:background="@color/background_color">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/rims_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/rims_icon"
            android:id="@+id/rims_icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:layout_below="@id/rims_icon"
            android:textSize="27sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/welcome"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textColor="@android:color/white"
            android:layout_below="@id/welcome"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/welcome_message"
            android:padding="10dp"
            android:gravity="center"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/get_started"
            android:background="@drawable/button_background"
            android:layout_below="@id/welcome_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/get_started"/>

    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:id="@+id/app_bar">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/frsc"
                android:contentDescription="@string/rims_icon"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/mtn"
                android:contentDescription="@string/rims_icon"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/liberty"
                android:contentDescription="@string/rims_icon"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/nurtw"
                android:contentDescription="@string/rims_icon"
                android:layout_weight="1"
                android:layout_margin="5dp"/>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:visibility="gone"
        android:id="@+id/loading_layout">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:background="@android:color/black"
            android:gravity="center">

            <com.tuyenmonkey.mkloader.MKLoader
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                app:mk_type="Whirlpool"
                app:mk_color="@color/colorPrimary"
                android:id="@+id/loader"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/loading"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>