<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="i.am.eipeks.rims._fragments.Journey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/ash"
                android:id="@+id/vehicle_registration_input_layout"
                android:theme="@style/EditTextStyleJourney"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/vehicle_number"
                    android:id="@+id/vehicle_registration"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:id="@+id/basic_information"
                android:layout_below="@id/vehicle_registration_input_layout">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/departure_state"
                    android:spinnerMode="dialog"
                    android:gravity="center"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/departure_park"
                    android:layout_below="@id/departure_state"
                    android:layout_marginTop="20dp"
                    android:spinnerMode="dialog"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/departure_park"
                    android:id="@+id/route_layout"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/route_from"
                        android:padding="5dp" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/route_from"
                        android:layout_marginTop="5dp"
                        android:spinnerMode="dialog"
                        android:entries="@array/route"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/route_to"
                        android:padding="5dp" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/route_to"
                        android:layout_marginTop="5dp"
                        android:spinnerMode="dialog"
                        android:entries="@array/route"/>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/route_layout"
                    android:textColorHint="@color/ash"
                    android:id="@+id/driver_s_name_input_layout"
                    android:theme="@style/EditTextStyleJourney"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:hint="@string/driver_s_name"
                        android:id="@+id/driver_s_name"
                        android:textColor="@android:color/black"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/driver_s_name_input_layout"
                    android:textColorHint="@color/ash"
                    android:id="@+id/driver_s_phone_number_input_layout"
                    android:theme="@style/EditTextStyleJourney"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:hint="@string/driver_s_phone"
                        android:id="@+id/driver_s_phone_number"
                        android:textColor="@android:color/black"/>

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/basic_information">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_background_one"
                    android:text="@string/continue_button_text"
                    android:textColor="@android:color/white"
                    android:id="@+id/continue_to_trip"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_transparent"
            android:visibility="gone"
            android:id="@+id/loading_layout"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:background="@android:color/black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/requesting"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />

                <com.tuyenmonkey.mkloader.MKLoader
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mk_type="Whirlpool"
                    app:mk_color="@color/colorPrimary"
                    android:id="@+id/loader"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
